[package]
name = "dip_common"
version = "0.1.0"
edition = "2021"
description = "Common library for DIP used in host and remote"
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = "4.3.2"
directories = "5.0.1"
figment = { version = "0.10.10", features = ["toml"] }
fs-err = { version = "2.9.0", features = ["tokio"] }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["net", "rt", "macros", "signal", "sync", "time"] }
tracing = "0.1.37"
