[package]
name = "dip_host"
version = "0.1.0"
edition = "2021"
description = "Host program for DIP"
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
dip_common = { version = "0.1.0", path = "../common" }
fs-err = "2.9.0"
once_cell = "1.17.2"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.37"
