[package]
name = "dip_remote"
version = "0.1.0"
edition = "2021"
description = "Remote program for DIP"
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
dip_common = { version = "0.1.0", path = "../common" }
local-ip-address = "0.5.3"
once_cell = "1.17.2"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "net", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
